Display (View) Logic - Adding HTML and CSS to the application and make sure to save each file after alteration

--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,2 +1,9 @@
 <h1>{{title}}</h1>
 <p>Welcome to {{title}}</p>
+<p>This node application walks through the basic's of routing, read and writing to json file, templating with handlebars.js and passing data to and from the back-end. </p>
+<p>Please use the paths below to navigate application</p>
+<ul>
+	<li><span style="font-weight: 700;">Home Page</span> - /</li>
+	<li><span style="font-weight: 700;">Create a User</span> - /createuser</li>
+	<li><span style="font-weight: 700;">Display all Users</span> - /users</li>
+</ul>
